# lpunpack_and_lpmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make.sh
cmake/: ext4_utils.cmake  libbase.cmake  libcrypto_utils.cmake  libjsonpb.cmake  liblog.cmake  liblp.cmake  libsparse.cmake  libvbmeta.cmake  partition_tools.cmake  vbmeta_tools.cmake
cmakes/: base.cmake  ext4_utils.cmake  libcrypto_utils.cmake  libjsonpb.cmake  liblog.cmake  liblp.cmake  libsparse.cmake  partition_tools.cmake
lib/include/: android  android-base  cutils  ext4_utils  jsonpb  liblp  log  private  sparse  system  utils
