cmake_minimum_required(VERSION 3.22)
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
project(lpunpack_and_lpmake CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -flto-visibility-public-std")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/lib)

include(cmakes/liblog.cmake)
add_subdirectory(lib/zlib EXCLUDE_FROM_ALL)
add_custom_target(libz.a ALL DEPENDS zlibstatic)
include(cmakes/base.cmake)
include(cmakes/libsparse.cmake)
add_subdirectory(lib/fmt EXCLUDE_FROM_ALL)
add_custom_target(libfmt.a ALL DEPENDS fmt)
include(cmakes/liblp.cmake)
include(cmakes/ext4_utils.cmake)
include(cmakes/libcrypto_utils.cmake)
add_subdirectory(lib/boringssl EXCLUDE_FROM_ALL)
add_custom_target(libcrypto.a ALL DEPENDS crypto)
set(protobuf_BUILD_SHARED_LIBS OFF)
add_subdirectory(lib/protobuf EXCLUDE_FROM_ALL)
add_dependencies(libprotobuf zlibstatic)
add_custom_target(protobuf ALL DEPENDS libprotobuf protoc)
include(cmakes/libjsonpb.cmake)
include(cmakes/partition_tools.cmake)
